src/stylesheets/styles.css
/* ... */
.splash_elements_container {
    width: 400px;
}

.cog_loading_container {
    display: flex;
    justify-content: center;
    align-items: flex-end;
}

.splash_cog {
    height: 85px;
    position: relative;
    margin-bottom: 15px;
}

.splash_cog:nth-of-type(1) {
    bottom: 10px;
}

.splash_cog:nth-of-type(2) {
    height: 60px;
    right: 13px;
}

.progress_container {
    display: flex;
    flex-direction: column;
    align-items: center;
}

.progress_label {
    color: #fff;
    margin-bottom: 5px;
}

.progress_bar {
    width: 100%;
    border: 1px solid #fff;
}

.splash_texts_container {
    color: var(--primary_color);
}

.splash_header {
    margin: 30px 0 20px 0;
}

.hover_nav_container { 
    position: absolute;
    z-index: 5;
    left: 40px;
    top: 50%;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

.circle-icon {
    margin: 7px 0px;
    height: 15px;
    width: 15px;
    border-radius: 50px;
    border: 3px solid #a1a1a1;
    transition: 0.2s ease-in-out;
    cursor: pointer;
}

.circle-icon:hover {
    border-color: #fff;
}


.circle-filled {
    background-color: #fff;
    border-color: #fff;
}

nav {
    display: flex;
    justify-content: space-between;
    align-items: center;
    height: 70px;
    color: #fff;
    padding: 0 4%;
}

.nav_button {
    cursor: pointer;
    transition: 0.2s ease-in-out;
    -webkit-user-select: none; /* Chrome/Safari */        
    -moz-user-select: none; /* Firefox */
    -ms-user-select: none; /* IE10+ */

    /* Rules below not implemented in browsers yet */
    -o-user-select: none;
    user-select: none;
}

.nav_button:hover {
    transform: scale(1.1);
}

.nav_menu_close {
    position: absolute;
    top: 50px;
    right: 50px;
    cursor: pointer;
    transition: 0.2s ease-in-out;
}

.nav_menu_close:hover {
    transform: scale(1.1);
}

.nav_menu {
    height: 100vh;
    width: 100vw;
    background-color: #fff;
    position: fixed;
    z-index: 6;
    display: flex;
    position: relative;
    transition: 0.4s ease-in-out;
    position: fixed;
    opacity: 1;
}

.nav_menu_hide {
    z-index: 0;
    opacity: 0;
    transform: translateX(100vw);
}

.nav_illustration {
    width: 21%;
    height: 100%;
    background-color: var(--primary_color);
}

.nav_content {
    width: 79%;
    height: 100%;
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: column;
}

.nav_inner {
    width: 900px;
    display: flex;
    height: 500px;
}

.nav_info {
    width: 50%;
    display: flex;
    justify-content: space-between;
    flex-direction: column;
}

.nav_menu_socials {
    display: flex;
}

.nav_menu_socials > div:first-of-type {
    margin-left: 0;
}

.nav_menu_socials > div {
    display: flex;
    margin: 0 40px;
}

.menu_socials_text {
    color: grey;
    transition: 0.2s ease-in-out;
    cursor: pointer;
    text-decoration: none;
}

.menu_socials_text:hover {
    color: black;
}

.menu_socials_text,
.nav_personal_info > div > p {
    font-size: 21px;
    margin-left: 30px;
}

.nav_personal_info > div:first-of-type {
    margin-top: 0;
}

.nav_personal_info > div {
    display: flex;
    align-items: center;
    margin: 30px 0;
}

.nav_inner > ul {
    width: 50%;
    list-style: none;
}

.nav_inner > ul > li:first-of-type {
    margin-top: 0;
}

.nav_inner > ul > li {
    margin: 20px 0;
    overflow: hidden;
}

.nav_menu_options {
    transition: transform 0.7s ease-in-out, color 0.2s ease-in-out;
    transform: translateY(0);
    display: block;
    text-decoration: none;
    color: #000;
    width: 200px;
    cursor: pointer;
}

.hide_text {
    transform: translateY(100px);
}

.nav_menu_options:hover {
    color: var(--secondary_color);
}

.nav_li_container {
    display: flex;
    list-style: none;
}

.nav_li_container > li {
    margin-right: 60px;
}

.anchorLink_style {
    cursor: pointer;
}

.home_section {
    width: 100%;
    background-color: var(--primary_color);
    background-image: url(../assets/images/bg.svg);
    background-size: cover;
    background-repeat: no-repeat;
    /* Fixes next tab animation */
    overflow: hidden;
}

.home_nextTab_container {
    transition: 0.4s ease-in-out;
    transform: translateY(100px);
}

header {
    display: flex;
    justify-content: center;
    align-items: center;
    min-height: 100vh;
}

.header_elems_container {
    width: 600px;
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: column;
    position: relative;
}

.img_header_container {
    height: 500px;
    display: flex;
    justify-content: center;
    align-items: center;
}

.header_text {
    position: absolute;
    bottom: 0;
    height: 100px;
    background-color: var(--primary_color);
    text-align: center;
    color: #fff;
}

.small_header {
    display: flex;
    align-items: center;
    padding: 30px 0;
}

.small_header_text {
    margin: 0px 15px;
    font-size: 16px;
    font-weight: 400;
    color: #fff;
}

.thin_line {
    border: 0.5px solid #fff;
    width: 50px;
}

.home_about {
    display: flex;
    min-height: 500px;
    flex-direction: column;
    align-items: center;
    color: #fff;
    padding-bottom: 300px;
}

.profile_photo {
    width: 100%;
    margin-bottom: 35px;
}

.center_text {
    width: 500px;
}

.center_text > img,
.center_text > p {
    margin-bottom: 35px;
}

.next_tab {
    height: 50px;
    display: flex;
    justify-content: center;
    align-items: center;
    cursor: pointer;
}

.blog_section {
    height: 100%;
    overflow: hidden;
}

.blog_next_container {
    transform: translateY(-50px);
    transition: 0.3s ease-in-out;
}

.blog_next_container_hidden {
    transform: translateY(0px);
}

.blog_header {
    font-weight: 500;
    margin-bottom: 10px;
}
/* ... */

